merge apple commit